# swagger_server/controllers/edit_post_controller.py
@@ -6,17 +6,19 @@ from flask import jsonify
 from swagger_server import util
 
 
-def edit_post(post_id, index_field):  # noqa: E501
+def edit_post(post_id, attribute_name, new_value):  # noqa: E501
     """Edit post
 
-    You can change the post&#x27;s atribute using it&#x27;s index from GetPostAtributes # noqa: E501
+    Using GetPostAtributes, a list of atributes is called and the user chooses which atribute he needs to name # noqa: E501
 
     :param post_id: Post id
     :type post_id: str
-    :param index_field: Index of the required field
-    :type index_field: int
+    :param attribute_name: Attribute name
+    :type attribute_name: str
+    :param new_value: New value of the attribute
+    :type new_value: str
 
-    :rtype: None
+    :rtype: str
     """
     client = MongoClient('localhost', 27017)
     db = client.database
@@ -34,9 +36,10 @@ def edit_post(post_id, index_field):  # noqa: E501
         del client
         return jsonify({}), 502
         
-    posts.update_one({'post_id': int(post_id)}, {'$set': {str(index_field): 'this API was written by monkey'}})
+    posts.update_one({'post_id': int(post_id)}, {'$set': {str(index_field): 'test'}})
 
     del posts
     del db
     del client
     return jsonify({}), 201
+
