# swagger_server/controllers/get_post_atributes_controller.py
@@ -11,7 +11,7 @@ from swagger_server import util
 def get_post_atributes(post_id):  # noqa: E501
     """Get post atributes
 
-    You can get the list of the post&#x27;s indexes, name of the post always has index 0 # noqa: E501
+    You can get the list of the post&#x27;s atributes. # noqa: E501
 
     :param post_id: Post id
     :type post_id: str
