# swagger_server/controllers/get_post_controller.py
@@ -7,11 +7,15 @@ from flask import jsonify
 from swagger_server.models.successfull2 import Successfull2  # noqa: E501
 from swagger_server import util
 
+
 def get_post(post_id):  # noqa: E501
     """Get post
-    Get post by it&#x27;s atributes # noqa: E501
+
+    Get post&#x27;s name and photo # noqa: E501
+
     :param post_id: Post id
     :type post_id: str
+
     :rtype: Successfull2
     """
     client = MongoClient('localhost', 27017)
